discussion/kv_engine/137161/137161_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-09-30 13:54:08.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-30 14:52:12.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4791/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4791/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4791/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30752/ : FAILURE

Failure of GoogleTest "CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only":

<pre>
[ RUN      ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file ep_engine_ep_unit_tests.db/test.245402\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.245402 failed: The data is invalid." thrown in the test body.
[  FAILED  ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only, where GetParam() = ("persistentMagma", "value_only") (47 ms)
CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30752/ )

Failure of a CTest test 138/394 Test #145: ep-engine_ep_unit_tests.CollectionsPersistent/CollectionsManifestUpdatePersistent ............................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6308/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6202/ : FAILURE

Failure of GoogleTest "AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_full_eviction":

<pre>
[ RUN      ] AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_full_eviction
[2020-09-30T14:06:53.290Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:474: Failure
[2020-09-30T14:06:53.290Z] Expected equality of these values:
[2020-09-30T14:06:53.290Z]   1
[2020-09-30T14:06:53.290Z]   ckptList.size()
[2020-09-30T14:06:53.290Z]     Which is: 2
[2020-09-30T14:06:53.290Z] [  FAILED  ] AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_full_eviction, where GetParam() = ("persistentRocksdb", "full_eviction") (11609 ms)
AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6202/ )

Timeout of a CTest test [2020-09-30T14:07:35.755Z]  23/411 Test #216: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6202/ )

Failure of a CTest test [2020-09-30T14:06:53.290Z]  16/411 Test #181: ep-engine_ep_unit_tests.AllBackends/DurabilityEPBucketTest .................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6202/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3318/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6083/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5158/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13974/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
